update scripts to run non interactive

--- a/Experiments/iPokeMon/docker/Dockerfile
+++ b/Experiments/iPokeMon/docker/Dockerfile
@@ -1,6 +1,7 @@
 
 
 FROM ubuntu:18.04
+COPY execute.sh scripts/execute.sh
 
 WORKDIR /root
 
@@ -24,37 +25,21 @@ RUN \
 	wget
 	
 RUN \
-	 curl -O http://download.redis.io/redis-stable.tar.gz && \
-	 mkdir redisTemp && \
-	 cd redisTemp && \
-	 tar xzvf ../redis-stable.tar.gz && \
-	 cd redis-stable && \
-	 make && \
-	 make test && \
-	 mkdir /etc/redis && \
-	 cp /home/george/redis-stable/redis.conf /etc/redis && \
-	 cp /../redis-stable/redis.conf /etc/redis && \
-	 cp ../../redis-stable/redis.conf /etc/redis && \
-	 cp redis.conf /etc/redis && \
-	 adduser --system --group --no-create-home redis && \
-	 mkdir /var/lib/redis && \
-	 chown redis:redis /var/lib/redis && \
-	 chmod 770 /var/lib/redis && \
-	 sudo systemctl start redis
+	pip install redis	
 	
-
+	
 RUN \
-	git clone https://gitlab.eeecs.qub.ac.uk/40126401/csc4006-EdgeBenchmarking.git && \
+	git init && \
+	git remote add -f csc4006-EdgeBenchmarking https://gitlab.eeecs.qub.ac.uk/40126401/csc4006-EdgeBenchmarking.git && \
 	ls && \
-	cd csc4006-EdgeBenchmarking/Experiments/iPokeMon/ipokemon/Application/iPokeMon-CloudServer && \
-	mkdir logs
-
-RUN \ 
-	cd csc4006-EdgeBenchmarking/Experiments/iPokeMon/ipokemon/Application/iPokeMon-CloudServer && \
-	chmod 777 runCloud.sh && \
-	. ./runCloud.sh
+	git config core.sparsecheckout true && \
+	echo Experiments/iPokeMon/ipokemon >> .git/info/sparse-checkout && \
+	git pull https://gitlab.eeecs.qub.ac.uk/40126401/csc4006-EdgeBenchmarking.git master
 	
-
-
+RUN \
+	cd Experiments/iPokeMon/ipokemon/Application/iPokeMon-CloudServer && \
+	mkdir logs
+	. ./runCloud.sh	
+	
 # defaults command
-CMD ["bash"]
+CMD ["scripts/execute.sh"]
