--- a/Experiments/FogLAMP/docker/Dockerfile
+++ b/Experiments/FogLAMP/docker/Dockerfile
@@ -60,10 +60,10 @@ RUN \
 
 RUN \
 	git init && \
-	git remote add -f csc4006-EdgeBenchmarking https://gitlab.eeecs.qub.ac.uk/40126401/csc4006-EdgeBenchmarking.git && \
+	git remote add -f origin https://github.com/jonathanmcchesney/DeFog.git && \
 	git config core.sparsecheckout true && \
 	echo Experiments/Scripts >> .git/info/sparse-checkout && \
-	git pull https://gitlab.eeecs.qub.ac.uk/40126401/csc4006-EdgeBenchmarking.git master		
+	git pull https://github.com/jonathanmcchesney/DeFog.git master		
 
 RUN \
         git clone https://github.com/foglamp/FogLAMP.git
